-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Server Programmability
-
Fully Compatible
-
ALL
-
v8.0
-
Programmability 2025-03-03
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Two compilation failures are happening only in v5 toolchain.
And only on x86 and only in DEBUG builds, i.e. the "! Linux x86 Shared Library DEBUG Compile (v5 toolchain)" buildvariant.
These were apparently triggered by but unrelated to SourceLocation changes in SERVER-99223.
The Version build, showing the two failing tasks:
https://spruce.mongodb.com/version/mongodb_mongo_master_2d3c30ea52fb2cfe9d72265fc1de102d3ef9b976
mongodb_mongo_master_2d3c30ea52fb2cfe9d72265fc1de102d3ef9b976 (SERVER-99223 improve mongo::SourceLocation (#32491))
compile_and_run_unittests_fourth_group on linux-x86-dynamic-debug-compile-toolchain-v5
has begun a consistent failure streak of (compile_and_run_unittests_fourth_group).
Safely revertible: False. Author: @Billy Donahue
The only problems I see here are very obscure toolchain-v5 GCC compile failures.
unittests fourth group:
(link)
src/mongo/util/future.h:977:16: error: 'SR.14516' is used uninitialized [-Werror=uninitialized]
This happening inside future setImpl, while compiling future_util_test.
It seems to have nothing to do with the SourceLocation and invariant improvements.
unittests eighth group:
(link)
[2025/02/18 20:06:18.372] /usr/include/bits/string_fortified.h:34:33: error: 'void* __builtin_memcpy(void*, const void*, long unsigned int)' writing 8 or more bytes into a region of size 0 overflows the destination [-Werror=stringop-overflow=]
[2025/02/18 20:06:18.372] 34 | return __builtin___memcpy_chk (__dest, __src, __len,
[2025/02/18 20:06:18.372] | ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
[2025/02/18 20:06:18.372] 35 | __glibc_objsize0 (__dest));
[2025/02/18 20:06:18.372] | ~~~~~~~~~~~~~~~~~~~~~~~~~~
[2025/02/18 20:06:18.372] In function 'mongo::bsoncolumn::BlockBasedInterleavedDecompressor::decompressGeneral<mongo::bsoncolumn::Collector<mongo::sbe::bsoncolumn::SBEColumnMaterializer, mongo::sbe::bsoncolumn::{anonymous}::PositionInfoTestContainer> >(absl::lts_20230802::flat_hash_map<const void*, boost::container::small_vector<mongo::bsoncolumn::Collector<mongo::sbe::bsoncolumn::SBEColumnMaterializer, mongo::sbe::bsoncolumn::{anonymous}::PositionInfoTestContainer>*, 1, void, void>, absl::lts_20230802::container_internal::HashEq<const void*, void>::Hash, absl::lts_20230802::container_internal::HashEq<const void*, void>::Eq, std::allocator<std::pair<const void* const, boost::container::small_vector<mongo::bsoncolumn::Collector<mongo::sbe::bsoncolumn::SBEColumnMaterializer, mongo::sbe::bsoncolumn::{anonymous}::PositionInfoTestContainer>*, 1, void, void> > > >&&)::<lambda(const mongo::BSONElement&)>':
More of these false positives from memcpy! (edited)
- is caused by
-
SERVER-99223 Use SourceLocation consistently in assertions
-
- Closed
-
- is related to
-
SERVER-102282 Fix or document v5 transitional warning suppressions in SP-owned code
-
- Closed
-
- related to
-
SERVER-102282 Fix or document v5 transitional warning suppressions in SP-owned code
-
- Closed
-