SERVER-101026 v5 fixes (#32546)

GitOrigin-RevId: bd6bb9c3447e2f7bc42c660f1a8e9bf50da2ce69