src/mongo/util/future_util_test.cpp
@@ -1382,6 +1382,8 @@ TEST_F(FutureUtilTest, WithCancellationWorksWithVoidInput) {
     ASSERT(cancelableFuture.isReady());
 }
 
+// TODO(SERVER-97447): One particular v5 buildvariant fails to build this test.
+#if !(!defined(__clang__) && defined(__x86_64__) && __GNUC__ >= 14)
 TEST_F(FutureUtilTest, WithCancellationWorksWithSemiFutureInput) {
     const int kResult{5};
     auto [promise, future] = makePromiseFuture<int>();
@@ -1392,6 +1394,7 @@ TEST_F(FutureUtilTest, WithCancellationWorksWithSemiFutureInput) {
     promise.emplaceValue(kResult);
     ASSERT_EQ(cancelableFuture.get(), kResult);
 }
+#endif
 
 TEST_F(FutureUtilTest, WithCancellationWorksWithSharedSemiFutureInput) {
     const int kResult{5};
